# discord-bot

./: Dockerfile  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 2023_10_30_2040-5f8dce9e6865_init.py  2023_10_30_2258-106e0b020783_add_chess_players.py  2023_10_31_0008-f8a2970a1106_add_jokes.py
src/bot/: __init__.py  bot.py  db.py  main.py  models.py  settings.py
src/bot/commands/: __init__.py  chess.py  jokes.py  links.py  saver.py  tex.py
src/scripts/: inject_jokes.py
