[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["Sebastian Banaszkiewicz <banaszkiewicz.sebastian@gmail.com>"]
readme = "README.md"
packages = [
    { include = "bot", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
python-chess = "^1.999"
"discord.py" = "^2.3.2"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
cairosvg = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.10.0"
isort = "^5.12.0"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start_bot = 'bot.main:start_bot'

[tool.isort]
profile = "black"

[tool.poe.tasks]
format = [
    { cmd ="isort src" }, 
    { cmd = "black src" }
]